fixing width bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,7 @@ code {
 @media screen and (max-width: 800px) {
   body {
     height: 120vh;
+    width: 100vw;
+    overflow-x: hidden;
   }
 }
